added a new index wrapper and nav bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 
   <link rel="stylesheet" href="/mayakeys/assets/css/main.css">
 </head>
+
 <body>
+  <header class="nav">
+    <div class="nav-inner">
+      <span class="nav-name">Maya Keys</span>
+      <nav>
+        <a href="/mayakeys/">About</a>
+        <a href="/mayakeys/projects.html">Research</a>
+        <a href="/mayakeys/cv.html">CV</a>
+        <a href="/mayakeys/contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
   <main class="container">
     <h1>Maya Keys</h1>
     <p class="subtitle">Computer Science @ Caltech · Robotics & Machine Learning</p>
@@ -23,9 +36,9 @@
     </p>
 
     <p>
-      <a href="#">CV</a> ·
-      <a href="#">GitHub</a> ·
-      <a href="#">LinkedIn</a> ·
+      <a href="/mayakeys/cv.html">CV</a> ·
+      <a href="https://github.com/mekeys113">GitHub</a> ·
+      <a href="https://linkedin.com/in/maya-keys">LinkedIn</a> ·
       <a href="mailto:mekeys@caltech.edu">Email</a>
     </p>
   </main>
