mmigrated to new website url

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <title>Research & Projects | Maya Keys</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="/mayakeys/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
     <div class="nav-inner">
       <span class="nav-name">Maya Keys</span>
       <nav>
-        <a href="/mayakeys/">About</a>
-        <a href="/mayakeys/projects.html">Research</a>
-        <a href="/mayakeys/cv.html">CV</a>
-        <a href="/mayakeys/contact.html">Contact</a>
+        <a href="/">About</a>
+        <a href="/projects.html">Research</a>
+        <a href="/cv.html">CV</a>
+        <a href="/contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -145,6 +145,7 @@
         <a href="#">Presentation</a>
       </div>
     </section>
+
 
     <!-- =====================================================
          SELECTED TECHNICAL PROJECTS
