added hero profile image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
+
+
 <body>
+
+  <div id="hero">
+    <div class="hero-content">
+      <img src="/assets/images/headshot.jpg" class="hero-image" />
+
+      <h1 class="hero-name">Maya Keys</h1>
+
+      <p class="hero-tagline">
+        <span id="typed-text"></span><span class="cursor">|</span>
+      </p>
+    </div>
+  </div>
+  
   <header class="nav">
     <div class="nav-inner">
       <span class="nav-name">Maya Keys</span>
