added typing effect

--- a/index.html
+++ b/index.html
@@ -57,5 +57,8 @@
       <a href="mailto:mekeys@caltech.edu">Email</a>
     </p>
   </main>
+
+  <script src="/assets/js/hero.js"></script>
+
 </body>
 </html>
