--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
-
-
 <body>
 
+  <!-- HERO INTRO -->
   <div id="hero">
     <div class="hero-content">
-      <img src="/assets/images/headshot.jpg" class="hero-image" />
+      <!-- Optional image (safe to remove if not ready) -->
+      <!-- <img src="/assets/images/headshot.jpg" class="hero-image" /> -->
 
       <h1 class="hero-name">Maya Keys</h1>
 
@@ -23,42 +23,49 @@
       </p>
     </div>
   </div>
-  
-  <header class="nav">
-    <div class="nav-inner">
-      <span class="nav-name">Maya Keys</span>
-      <nav>
-        <a href="/">About</a>
-        <a href="/projects.html">Research</a>
-        <a href="/cv.html">CV</a>
-        <a href="/contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
 
-  <main class="container">
-    <h1>Maya Keys</h1>
-    <p class="subtitle">Computer Science @ Caltech · Robotics & Machine Learning</p>
+  <!-- REAL SITE CONTENT -->
+  <div id="site-content" class="hidden">
 
-    <p>
-      I work on learning-based robotics, multimodal representation learning,
-      and perception systems for real-world environments.
-    </p>
+    <header class="nav">
+      <div class="nav-inner">
+        <span class="nav-name">Maya Keys</span>
+        <nav>
+          <a href="/">About</a>
+          <a href="/projects.html">Research</a>
+          <a href="/cv.html">CV</a>
+          <a href="/contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
 
-    <p>
-      Currently, I am involved in reinforcement learning for high-DOF robotic
-      locomotion and machine learning pipelines for scientific data analysis.
-    </p>
+    <main class="container">
+      <h1>Maya Keys</h1>
+      <p class="subtitle">
+        Computer Science @ Caltech · Robotics & Machine Learning
+      </p>
 
-    <p>
-      <a href="/cv.html">CV</a> ·
-      <a href="https://github.com/mayakeys">GitHub</a> ·
-      <a href="https://linkedin.com/in/maya-keys">LinkedIn</a> ·
-      <a href="mailto:mekeys@caltech.edu">Email</a>
-    </p>
-  </main>
+      <p>
+        I work on learning-based robotics, multimodal representation learning,
+        and perception systems for real-world environments.
+      </p>
 
+      <p>
+        Currently, I am involved in reinforcement learning for high-DOF robotic
+        locomotion and machine learning pipelines for scientific data analysis.
+      </p>
+
+      <p>
+        <a href="/cv.html">CV</a> ·
+        <a href="https://github.com/mayakeys">GitHub</a> ·
+        <a href="https://linkedin.com/in/maya-keys">LinkedIn</a> ·
+        <a href="mailto:mekeys@caltech.edu">Email</a>
+      </p>
+    </main>
+
+  </div>
+
+  <!-- HERO SCRIPT -->
   <script src="/assets/js/hero.js"></script>
-
 </body>
 </html>
