--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Main site styles -->
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -14,8 +14,9 @@
   <!-- ================= HERO ================= -->
   <div id="hero">
     <div class="hero-content">
+
       <img
-        src="/assets/images/profile.jpg"
+        src="assets/images/profile.jpg"
         alt="Maya Keys"
         class="hero-image"
       />
@@ -25,26 +26,25 @@
       <p class="hero-tagline">
         <span id="typed-text"></span><span class="cursor">|</span>
       </p>
+
     </div>
   </div>
 
   <!-- ================= MAIN SITE CONTENT ================= -->
   <div id="site-content" class="hidden">
 
-    <!-- NAV -->
     <header class="nav">
       <div class="nav-inner">
         <span class="nav-name">Maya Keys</span>
         <nav>
-          <a href="/">About</a>
-          <a href="/projects.html">Research</a>
-          <a href="/cv.html">CV</a>
-          <a href="/contact.html">Contact</a>
+          <a href="index.html">About</a>
+          <a href="projects.html">Research</a>
+          <a href="cv.html">CV</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </div>
     </header>
 
-    <!-- PAGE CONTENT -->
     <main class="container">
       <h1>Maya Keys</h1>
       <p class="subtitle">
@@ -62,7 +62,7 @@
       </p>
 
       <p>
-        <a href="/cv.html">CV</a> ·
+        <a href="cv.html">CV</a> ·
         <a href="https://github.com/mayakeys">GitHub</a> ·
         <a href="https://linkedin.com/in/maya-keys">LinkedIn</a> ·
         <a href="mailto:mekeys@caltech.edu">Email</a>
@@ -72,7 +72,7 @@
   </div>
 
   <!-- ================= HERO SCRIPT ================= -->
-  <script src="/assets/js/hero.js"></script>
+  <script src="assets/js/hero.js"></script>
 
 </body>
 </html>
