smoother transition between cover and home page

--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
 <body>
 
   <!-- ================= HERO ================= -->
+
   <div id="hero">
-    <div class="hero-content">
+   <div class="hero-content">
 
-      <img
-        src="assets/images/profile.jpg"
-        alt="Maya Keys"
-        class="hero-image"
-      />
+     <img
+       src="assets/images/profile.jpg"
+       alt="Maya Keys"
+       class="hero-image"
+       id="hero-image"
+     />
 
-      <h1 class="hero-name">Maya Keys</h1>
+     <div class="hero-text">
+       <h1 class="hero-name" id="hero-name">Maya Keys</h1>
 
-      <p class="hero-tagline">
-        <span id="typed-text"></span><span class="cursor">|</span>
-      </p>
+       <p class="hero-tagline" id="hero-tagline">
+         <span id="typed-text"></span><span class="cursor">|</span>
+       </p>
+     </div>
 
-    </div>
+   </div>
   </div>
+
 
   <!-- ================= MAIN SITE CONTENT ================= -->
   <div id="site-content" class="hidden">
