--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
    <div class="hero-content">
 
      <img
-       src="assets/images/profile.jpg"
-       alt="Maya Keys"
-       class="hero-image"
-       id="hero-image"
+      src="assets/images/profile.jpg"
+      alt="Maya Keys"
+      class="hero-image"
+      id="hero-image"
      />
 
-     <div class="hero-text">
-       <h1 class="hero-name" id="hero-name">Maya Keys</h1>
+    <div class="hero-text" id="hero-text">
+      <h1 class="hero-name" id="hero-name">Maya Keys</h1>
 
-       <p class="hero-tagline" id="hero-tagline">
+       <p class="hero-tagline">
          <span id="typed-text"></span><span class="cursor">|</span>
        </p>
      </div>
 
    </div>
   </div>
+
 
 
   <!-- ================= MAIN SITE CONTENT ================= -->
