added navbar animations

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
   <!-- MAIN SITE CONTENT -->
   <div id="site-content" class="site-content">
     <header class="nav">
+      <canvas id="nav-canvas"></canvas>
       <div class="nav-inner">
-        <span class="nav-name">Maya Keys</span>
+        <a href="index.html" class="nav-name nav-home">MK</a>
         <nav>
-          <a href="index.html">About</a>
+          <a href="#site-content" id="about-link">About</a>
           <a href="projects.html">Research</a>
           <a href="cv.html">CV</a>
           <a href="contact.html">Contact</a>
