--- a/index.html
+++ b/index.html
@@ -28,38 +28,48 @@
     </div>
 
     <img class="hero-image" src="assets/images/profile.jpg" />
+    <!-- MAIN PAGE IMAGE -->
   </div>
 </div>
 
-
+<img
+  src="assets/images/profile.jpg"
+  class="profile-image"
+  id="profile-image"
+/>
 
   <!-- MAIN SITE CONTENT -->
   <div id="site-content" class="site-content">
     <header class="nav">
       <canvas id="nav-canvas"></canvas>
+
       <div class="nav-inner">
-        <a href="index.html" class="nav-name nav-home">MK</a>
-        <nav>
-          <a href="#site-content" id="about-link">About</a>
-          <a href="projects.html">Research</a>
+       <!-- LEFT: logo -->
+       <a href="index.html" class="nav-name nav-home">MK</a>
+
+       <!-- RIGHT: links -->
+        <nav class="nav-links">
+          <a href="#about">About</a>
+          <a href="#research">Research</a>
           <a href="cv.html">CV</a>
-          <a href="contact.html">Contact</a>
+         <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
 
     <main class="container">
       <h1>Maya Keys</h1>
-      <p class="subtitle">Computer Science @ Caltech · Robotics & Machine Learning</p>
 
       <p>
-        I work on learning-based robotics, multimodal representation learning,
-        and perception systems for real-world environments.
+        I'm a 3rd year undergraduate student at Caltech, studying Computer Science with minor in Robotics. 
+       I’m interested in computer vision and robotics with a focus on embodied perception, multimodal sensing, and visual reasoning. 
+       I’m drawn to problems where agents must build 3D world models of their environment from multimodal sensory input 
+       and use them for real-time reasoning and decision-making.
       </p>
 
       <p>
-        Currently, I am involved in reinforcement learning for high-DOF robotic
-        locomotion and machine learning pipelines for scientific data analysis.
+        <!-- I am currently a research intern at NVIDIA Research, working on embodied AI and vision for robotics. -->
+         I am currently working on MiniEELS, a snake-like, high-DOF robotic platform inspired by JPL’s EELS for autonomous navigation in construction sites.
       </p>
 
       <p>
