fixed image scrolling + finished about section

--- a/index.html
+++ b/index.html
@@ -26,17 +26,10 @@
         </div>
       </div>
     </div>
-
-    <img class="hero-image" src="assets/images/profile.jpg" />
-    <!-- MAIN PAGE IMAGE -->
   </div>
 </div>
 
-<img
-  src="assets/images/profile.jpg"
-  class="profile-image"
-  id="profile-image"
-/>
+<img class="hero-image" src="assets/images/profile.jpg" />
 
   <!-- MAIN SITE CONTENT -->
   <div id="site-content" class="site-content">
@@ -61,7 +54,7 @@
       <h1>Maya Keys</h1>
 
       <p>
-        I'm a 3rd year undergraduate student at Caltech, studying Computer Science with minor in Robotics. 
+        I'm a 3rd year undergraduate student at <a href="https://www.caltech.edu/" class="inline-link">Caltech</a>, studying Computer Science with minor in Robotics. 
        I’m interested in computer vision and robotics with a focus on embodied perception, multimodal sensing, and visual reasoning. 
        I’m drawn to problems where agents must build 3D world models of their environment from multimodal sensory input 
        and use them for real-time reasoning and decision-making.
@@ -69,7 +62,13 @@
 
       <p>
         <!-- I am currently a research intern at NVIDIA Research, working on embodied AI and vision for robotics. -->
-         I am currently working on MiniEELS, a snake-like, high-DOF robotic platform inspired by JPL’s EELS for autonomous navigation in construction sites.
+         I am currently working in Caltech's <a href="https://aerospacerobotics.caltech.edu/" class="inline-link"> Autonomous Robotics and Control Lab</a> on MiniEELS,
+         a snake-like, high-DOF robotic platform inspired by <a href="https://www.jpl.nasa.gov/robotics-at-jpl/eels/" class="inline-link">JPL's EELS</a> for autonomous navigation in construction sites.
+      </p>
+
+       <p>
+         Previously, I've interned at NASA Jet Propulsion Laboratory working on Cassini CDA spectral analysis, 
+         conducted NLP Automated Grading research with Prof. Adam Blank, and CV research for Morphogenisis Analysis with the Meyerowitz Lab.
       </p>
 
       <p>
