--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
        <!-- RIGHT: links -->
         <nav class="nav-links">
-          <a href="#about">About</a>
-          <a href="#research">Research</a>
-          <a href="cv.html">CV</a>
-         <a href="#contact">Contact</a>
+          <a href="index.html" class="active">About</a>
+          <a href="index.html" class="active">About</a>
+          <a href="index.html" class="active">About</a>
+          <a href="index.html" class="active">About</a>
         </nav>
       </div>
     </header>
